--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,13 @@
+/*
+  Developed By: Sami Nayeem
+  Contact: saminayeem2@gmail.com
+*/
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -30,4 +35,4 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-}
+} */
